public/styles/site/_component-card.scss
.card-grid {
	margin-top: 1em;
}

.card-list {
	margin-top: 1em;
}

.card-group {
	display: flex;
	flex-wrap: wrap;
}

.card {
	border: none;
	display: flex;
	background-color: $white;
	box-shadow: 0 0 24px 0 $light-gray;

	&--vertical {
		flex-direction: column;
	}

	&--vertically-centered {
		align-items: center;
	}

	&--horizontal {
		flex-direction: row;
	}

	&--small-padding {
		padding: 0.75em;
	}

	&--medium-padding {
		padding: 1em;
	}

	&--large-padding {
		padding: 2em;
	}

	&--large-padding-below {
		padding-bottom: 2em;
	}

	&--small-margin-below {
		margin-bottom: 1em;
	}

	&--clickable {
		cursor: pointer;
	}
}

.card__columns {
	display: flex;
	flex-direction: row;
}

.card__column {
	padding: 1em;

	&--left {
		width: 30%;
	}

	&--right {
		width: 70%;
	}
}

.card {
	&--medium {
		@media all and ( min-width: 880px ) {
			width: 45%;
		}
	}
}

.card__image {
	width: 100%;
}

.card__image-text {
	display: flex;
	flex-direction: column;
	margin: 0;
	padding: 1.5em 0.25em 1em 0.25em;

	&--smaller {
		font-size: 0.8em;
	}

	&--italic {
		font-style: italic;
	}

	&--small-padding-top {
		padding-top: 1em;
	}

	&--centered {
		text-align: center;
	}
}

.card__image-title {
	&--large {
		font-size: 1.125em;
	}

	&--centered {
		text-align: center;
	}

	&--right-aligned {
		text-align: right;
	}
}

.card__image-description {
	line-height: 1.3em;
	padding-bottom: 1em;
	color: $text-color-7;

	&--centered {
		text-align: center;
	}
}

.card__details {
	position: relative;
	display: flex;
	width: 100%;
	height: 100%;

	&--centered {
		align-items: center;
		justify-content: center;
	}

	&--horizontal {
		flex-direction: row;
	}

	&--vertical {
		flex-direction: column;
	}
}

.card-details__top-bar {
	display: inline-block;
	width: 5em;
    border-top: .5em solid $teal;
    margin-bottom: 1em;
}

.card-details__header {
	font-size: 1.6875em;
	font-weight: 300;

	&--small {
		font-weight: 400;
    	font-size: 1.3em;
	}

	&--medium-margin-above{
		margin-top: 1.5em
	}
}

.card-details__body {
	font-size: 1em;
	line-height: 1.3em;

	&--bold {
		font-weight: 600
	}
}

.card-details__paragraph {

	&:not( :first-of-type ) {
		margin-top: 1em;
	}
}

.card__subheading {
	display: flex;	
	width: 75%;

	&--centered {
		text-align: center;
	}

}

/* not optimized below this line */
.card__title {
	display: flex;
	font-weight: 300;
	justify-content: center;
	text-align: center;
	width: 100%;
}

.card__content {
	display: flex;
	flex-direction: column;
	align-items: center;

	@media all and ( min-width: 540px ) {
		display: flex;
		flex-direction: row;
	}

	&--centered {
		text-align: center;
	}
}

.card__content-group {
	display: flex;
	flex-wrap: wrap;
	width: 100%;
	overflow: hidden;

	&--border-top {
		border-top: 1px solid $background-color-dark;
	}
}

.card__content-block {
	margin: 1em 0 2em;

	&--centered {
		text-align: center;
	}
}

.card__overview {
	display: flex;
	width: 100%;
	margin-top: 1em;

	@media all and (min-width: 780px) {
		width: 50%;
	}
}

.card__overview-icon {
	width: 1em;
    text-align: center;
}

.card__overview-text {
	margin-left: 1em;
	align-self: center;

	&--normal {
		font-style: normal;
	}
}

/* NOTE: replace instances with .card__image-text */
.card__text {
	margin-right: 3em;
	margin: 0.5em 3em 0.5em 2.8em; /* 2.8em causes the text to line up with the other success stories images creating a clean line */
	text-align: left;
}

.card__icon-container {
	align-self: center;
	position: relative;
	top: -2.2em;
	background-color: $background-color-4;
	padding: .5em;
	border-radius: 50%;
}

.card__icon {
	width: 1.5em;
	height: 1.5em;
}

.card__list-container {
    display: flex;
    width: 50%;
    flex-direction: column;
}

.card__list {
    margin: 0;
    padding: 0;
    list-style: none;
}

.card__list-title {
	border-bottom: 1px solid;
    padding-bottom: .5em;
    margin-right: 1em;
}

.card__list-item {
	padding: 0.3em 0 0 1em;
	color: $text-color-7;

	&--disabled {
		color: $text-color-1;
	}
}

.card__content-divider {
	width: 100%;
	margin: 2em 0 1em;
	opacity: .5;
}

